add placehoder and submit button

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
 <center>
     <header>
-        <h1> <font color="879ba6">*:･ﾟ✧ MEMBER ☆ﾟ.*</font></h1>
-        <p><font color="#9ea1d">ฟอร์มสมัครสมาชิกห้องสมุด</font></p>
+        <h1> <font color="black">*:･ﾟ✧ MEMBER ☆ﾟ.*</font></h1>
     </header>
 <br>
     <form>
@@ -26,16 +25,16 @@
             <input type="text" id="เพศ" name="เพศ"><br><br>
 
             <label for="รหัสนักศึกษา">รหัสนักศึกษา :</label>
-            <input type="text" id="รหัสนักศึกษา" name="รหัสนักศึกษา"><br><br>
+            <input type="number" id="รหัสนักศึกษา" name="รหัสนักศึกษา"><br><br>
 
             <label for="คณะที่ศึกษา">คณะที่ศึกษา :</label>
             <input type="text" id="คณะที่ศึกษา" name="คณะที่ศึกษา"><br><br>
 
             <label for="email">ที่อยู่อีเมล (E-mail address) :</label>
-            <input type="text" id="email" name="email"><br><br>
+            <input type="email" id="email" name="email" placeholder="Enter your email"><br><br>
 
             <label for="ิbirth">วัน/เดือน/ปี :</label>
-            <input type="text" id="ิbirth" name="ิbirth"><br><br>
+            <input type="text" id="ิbirth" name="ิbirth" placeholder="00/00/0000"><br><br>
 
             <label for="หนังสือที่สนใจ">ประเภทของหนังสือที่สนใจ :</label>
             <input type="text" id="หนังสือที่สนใจ" name="หนังสือที่สนใจ"><br><br>
@@ -45,6 +44,8 @@
 
 
         </fieldset>
+        <br>
+        <input type="submit" value="Submit">
     </form>
 </center>
 </body>
