modified form controls gender and newletter

--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
             <label for="nameEn">ชื่อ-สกุล (ภาษาอังกฤษ) :</label>
             <input type="text" id="nameEn" name="nameEn"><br><br>
 
-            <label for="เพศ">เพศ :</label>
-            <input type="text" id="เพศ" name="เพศ"><br><br>
+            <label for="gender">เพศ :</label>
+            <input type="radio" id="male" name="gender" value="male">
+            <label for="male">ชาย</label>
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">หญิง</label>
+            <input type="radio" id="anonymous" name="gender" value="anonymous">
+            <label for="anonymous">ไม่ระบุ</label>
+            <br><br>
 
             <label for="รหัสนักศึกษา">รหัสนักศึกษา :</label>
             <input type="number" id="รหัสนักศึกษา" name="รหัสนักศึกษา"><br><br>
@@ -39,8 +45,8 @@
             <label for="หนังสือที่สนใจ">ประเภทของหนังสือที่สนใจ :</label>
             <input type="text" id="หนังสือที่สนใจ" name="หนังสือที่สนใจ"><br><br>
 
-            <label for="รับข่าวสาร">ความต้องการรับข่าวสารของห้องสมุดทางอีเมลหรือไม่ :</label>
-            <input type="text" id="รับข่าวสาร" name="รับข่าวสาร"><br><br>
+            <label for="newsletter">ความต้องการรับข่าวสารของห้องสมุดทางอีเมลหรือไม่ :</label>
+            <input type="checkbox" id="newsletter" name="newsletter"><br><br>
 
 
         </fieldset>
