--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
             <input type="email" id="email" name="email" placeholder="Enter your email"><br><br>
         
         </fieldset>
+    </form>
     <br>
-
+    <form>
         <fieldset>
             <legend>ข้อมูล</legend><br>
             <label for="รหัสนักศึกษา">รหัสนักศึกษา :</label>
